[package]
name = "ohttp-client"
version = "0.1.0"
edition = "2024"

[features]
bitreq = ["dep:bitreq"]

[dependencies]
bhttp = "0.7.2"
bitreq = { version = "0.3.7", features = ["async", "proxy"], optional = true }
getrandom = "0.3"
ohttp = "0.7.2"
thiserror = "2"
url = "2"

[dev-dependencies]
bitreq = { version = "0.3.7", features = ["proxy"] }
ohttp-relay = "0.0.11"
tokio = { version = "1", features = ["rt-multi-thread"] }
